# SmartContractGen

./: .gitignore  README.md  commit-history.txt  interoperability_test.js  manual-crowdfunding-keypair.json  recreate-history.sh  setup_wallet.sh  simple_interop_test.js
.keypair/: dev-wallet.json
Examples/: example1.rs  example2.rs  example3.rs  example5.rs  example7.rs
api/: .env  ESCROW AGREEMENT.docx  main.py  parse.py
back/: .env  contracts_data.json  main.py  package-lock.json  package.json  requirements.txt  smart_contract.rs  test 2.py  test.py  test_contract_schema.json
back/ai/: main.py  (+5 more)
back/test-deploy/programs/test-deploy/: Cargo.toml
back/test-deploy/programs/test-deploy/src/: lib.rs
contract_deploy/: Anchor.toml  Cargo.toml  program-info.json
contract_deploy/programs/deploy/: Cargo.toml
contract_deploy/programs/deploy/src/: lib.rs
contract_deploy/scripts/: deploy.sh
contract_deploy/scripts/wallets/: deploy-wallet.json
deploy/: Anchor.toml  Cargo.toml  README.md  deploy-keypair.json  package.json  program-info.json
idl/: escrow.json
test-deploy/: Anchor.toml  Cargo.toml  package.json
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-3200-C9fTxDBnRArzdBKWyNbCHQ5rM9xkrqWmMaQvgg1FY43W.tar.zst  snapshot-3300-Cw1eSMWDapUdt2GYPQzNBuyirDyrEag1FKoRLRpVptms.tar.zst  snapshot-3900-3GAi5gYkr7JU3kwsjfUjZwHmQQuh1RUSdw1NBT66eB1s.tar.zst  snapshot-4000-F4g3SS7zxpKaD83EcqaZYLuBPwRQz5SEEbUkHxqFUDvp.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
ui/: package-lock.json  package.json  vite.config.js
(+128 files in other folders)
