[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
spl-token = "4.0"
spl-associated-token-account = "2.0"

anchor-lang = "0.30.1"
solana-program = "1.17.14"

[workspace.package]
authors = ["SmartContractGen"]
repository = "https://github.com/sukhrajkalon/SmartContractGen"
