[package]
name = "test-deploy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_deploy"

[[test]]
name = "test_escrow"
path = "src/test.rs"
harness = false

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "2.1.14"  
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
